fix(card and container dim)

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,15 +1,11 @@
 .card{
     min-height: 300px;
-    width: auto!important;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    width: 300px!important;
     border: 2px solid green;
 }
 
 .card-body {
-    width: 250px;
-    height: 100%;
-    font-size: 1rem;
+    font-size: 0.8rem;
 }
 
 .card-body h2{
