--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -3,6 +3,5 @@
     color: black;
     margin-top: 20px;
     margin-bottom: 20px;
-    min-height: 300px;
-    width: 500px!important;
+    height: 600px;
 }
